# breadctl

./: .gitignore  .gitmodules  .python-version  CONFERENCE.md  Makefile  README.md  TODO.md  benchmark-results.md  pyproject.toml
benchmarks/: benchmark-full-matrix.md  benchmark-results.md  benchmark-verbose.md
scripts/: plot_benchmarks.py
src/: breadctl
src/breadctl/: __init__.py  bake.py  deliver.py  inventory.py  lazy.py  normal.py  util.py
src/breadctl_cappa/: __init__.py  inventory.py  lazy.py  normal.py
src/breadctl_click/: __init__.py  deliver.py  lazy.py  normal.py
src/breadctl_cyclopts/: __init__.py  lazy.py  normal.py
tests/: __init__.py  test_cappa_lazy.py  test_cappa_normal.py  test_cli_variants.py  test_click_lazy.py  test_click_normal.py  test_cyclopts_lazy.py  test_cyclopts_normal.py  test_lazy.py  test_modules.py  test_normal.py
