[project]
name = "breadctl"
version = "0.1.0"
description = "PEP 810 lazy imports demo -  a bread operations CLI"
readme = "README.md"
authors = [
    { name = "Jacob Coffee", email = "jacob@python.org" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.8.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "httpx>=0.27.0",
    "uv-build>=0.9.7,<0.10.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]


[project.scripts]
breadctl = "breadctl.normal:cli"
breadctl-lazy = "breadctl.lazy:cli"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

