[project]
name = "breadctl"
version = "0.1.0"
description = "PEP 810 lazy imports demo -  a bread operations CLI"
readme = "README.md"
authors = [
    { name = "Jacob Coffee", email = "jacob@python.org" }
]
requires-python = ">=3.15"
dependencies = [
    "cappa>=0.21.0",
    "click>=8.0.0",
    "rich-click>=1.7.0",
    "cyclopts>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
heavy = [
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
breadctl_cappa = { path = "src/breadctl-cappa" }
breadctl_click = { path = "src/breadctl-click" }
breadctl_cyclopts = { path = "src/breadctl-cyclopts" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]


[project.scripts]
# Cappa variants (default)
breadctl = "breadctl_cappa.normal:cli"
breadctl-lazy = "breadctl_cappa.lazy:cli"

# Click variants
breadctl-click = "breadctl_click.normal:cli"
breadctl-click-lazy = "breadctl_click.lazy:cli"

# Cyclopts variants
breadctl-cyclopts = "breadctl_cyclopts.normal:cli"
breadctl-cyclopts-lazy = "breadctl_cyclopts.lazy:cli"

[tool.ruff]
line-length = 120
target-version = "py314" # it's a lie but uv doesn't like 315 yet :)
# Also lazy

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

